# gptq-svd

./: README.md  pyproject.toml  setup_env.sh
src/TruncGPTQ/: benchmarks.py  data_utils.py  eval_utils.py  extract_log.py  gptq_utils.py  model_utils.py  quantize.py  run_baseline.py  run_benchmark.py  run_experiments.py
src/TruncGPTQ/benchmark_results/: final_benchmark.csv  results_partial.csv
src/TruncGPTQ/benchmark_results/FP16_Baseline/: results.json
src/TruncGPTQ/benchmark_results/GPTQ_W2_Asym/: results.json
src/TruncGPTQ/benchmark_results/GPTQ_W3_Asym/: results.json
src/TruncGPTQ/benchmark_results/GPTQ_W3_Sym/: results.json
src/TruncGPTQ/benchmark_results/GPTQ_W4_Asym/: results.json
src/TruncGPTQ/benchmark_results/GPTQ_W4_Sym/: results.json
src/TruncGPTQ/benchmark_results/Trunc_W2_Asym/: results.json
src/TruncGPTQ/benchmark_results/Trunc_W3_Asym/: results.json
src/TruncGPTQ/benchmark_results/Trunc_W3_Sym/: results.json
src/TruncGPTQ/benchmark_results/Trunc_W4_Asym/: results.json
src/TruncGPTQ/benchmark_results/Trunc_W4_Sym/: results.json
src/gptq-svd/: data_utils.py  eval_utils.py  gptq_utils.py  model_utils.py  quantize.py  run_baseline.py  run_benchmark.py  run_experiments.py  utils.py
